临时更改了asdb超链接

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="btn btn-primary" style="margin-top: -2em;">
                         <a href="https://wiki.asoulfan.com/" class="btn">访问维基</a> |
                         <a href="https://tools.asoulfan.com/" class="btn">工具</a> |
-                        <a href="https://livedb.asoulfan.com/" class="btn">ASDB</a>
+                        <a href="https://www.asdb.live" class="btn">ASDB</a>
                     </div>
                 </div>
             </div>
