--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <p>
             <p><div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100vw;">
                 <a class="p4_about_1" href="https://asoulcnki.asia/" target="_blank" style="margin-right:30px;">枝网查重</a>
-                <a class="p4_about_1" href="https://livedb.asoulfan.com" target="_blank"style="margin-right:30px;">ASDB</a>
+                <a class="p4_about_1" href="https://www.asdb.live" target="_blank"style="margin-right:30px;">ASDB</a>
                 <a class="p4_about_1" href="https://www.asoul.cloud" target="_blank"style="margin-right:30px;">一个魂二创</a>
                 <a class="p4_about_1" href="https://www.asoulwiki.com" target="_blank"style="margin-right:30px;">ASWIKI</a>
                 <a class="p4_about_1" href="https://www.bilibili.com/video/BV1wo4y1X7Tk?p=1" target="_blank"style="margin-right:30px;">YBB</a>
