--- a/en/index.html
+++ b/en/index.html
@@ -79,8 +79,8 @@
 <!-- part1 -->
 <section class="ftco-section ftco-slant patr1 part1-mobile" id="Group">
     <div class="part-introduce ftco-animate">
-        <div class="decorate">◤</div>
-        <p>
+        <div class="decorate3">◤</div>
+        <p class="decorate3">
             As the first virtual idol project operated by an entertainment company in China, <a href="https://space.bilibili.com/703007996/">A-SOUL</a>
             represents 3D virtual images of girls using motion capture technology. The group consists of five girls with different personalities and hobbies.
         </p>
