修改移动端英文样式和倾角的斜度布局

--- a/en/index.html
+++ b/en/index.html
@@ -89,7 +89,7 @@
         <div class="introduce-wrapper">
             <img src="../images/part1_bg_2.webp" class="part1-bg-3">
             <div class="mobile-decorate">◤</div>
-            <p>
+            <p class="mobile-decoratep">
                 As the first virtual idol project operated by an entertainment company in China, A-SOUL represents 3D virtual images of girls using motion capture technology. The group consists of five girls with different personalities and hobbies.
             </p>
         </div>
