优化英文版细节

--- a/en/index.html
+++ b/en/index.html
@@ -80,8 +80,8 @@
 <section class="ftco-section ftco-slant patr1 part1-mobile" id="Group">
     <div class="part-introduce ftco-animate">
         <div class="decorate3">◤</div>
-        <p class="decorate3">
-            As the first virtual idol project operated by an entertainment company in China, <a href="https://space.bilibili.com/703007996/">A-SOUL</a>
+        <p class="decorate3" style="word-break: keep-all">
+             &nbsp; The first virtual idol project operated by an entertainment company in China, <a href="https://space.bilibili.com/703007996/">A-SOUL</a>
             represents 3D virtual images of girls using motion capture technology. The group consists of five girls with different personalities and hobbies.
         </p>
     </div>
@@ -127,7 +127,7 @@
                 <!-- Bella -->
                 <div class="p2_introduce p2_introduce2">
                     <div class="p2_intro" style="background-color: #DB7D74;">
-                        Team Leader & Dancer of A-SOUL, Virtual Idol Project of YUE HUA Entertainment.
+                        Team Leader & dancer of A-SOUL, Virtual Idol Project of YUE HUA Entertainment.
                         </br>
                         <a href="https://wiki.asoulfan.com/zh/%E8%B4%9D%E6%8B%89" class="p2_bilibili">
                             Learn More→
