修复了视频

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="p3_imgwrapper1 p3_imgwrapper col-md-2">
-                <div class="imgBox" onclick="window.open('https://https://www.asdb.live/')">
+                <div class="imgBox" onclick="window.open('https://www.asdb.live')">
                     <div class="p3_inner_text_wrapper">
                         <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
                         <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
