--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                 <a class="p4_about_1" href="https://www.asdb.live" target="_blank"style="margin-right:30px;">ASDB</a>
                 <a class="p4_about_1" href="https://www.asoul.cloud" target="_blank"style="margin-right:30px;">一个魂二创</a>
                 <a class="p4_about_1" href="https://www.asoulwiki.com" target="_blank"style="margin-right:30px;">ASWIKI</a>
-                <a class="p4_about_1" href="https://www.bilibili.com/video/BV1wo4y1X7Tk?p=1" target="_blank"style="margin-right:30px;">YBB</a>
+                <a class="p4_about_1" href="https://mew.fun" target="_blank"style="margin-right:30px;">Mew</a>
+                <a class="p4_about_1" href="https://asoul.jp" target="_blank"style="margin-right:30px;">asoul.jp</a>
             </div>
 
 
