--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                 <a class="p4_about_1" href="https://www.asoulwiki.com" target="_blank"style="margin-right:30px;">ASWIKI</a>
                 <a class="p4_about_1" href="https://mew.fun" target="_blank"style="margin-right:30px;">Mew</a>
                 <a class="p4_about_1" href="https://asoul.jp" target="_blank"style="margin-right:30px;">asoul.jp</a>
+                <a class="p4_about_1" href="https://www.bilibili.com/video/BV1M64y1a7zh" target="_blank"style="margin-right:30px;">Sir this way!</a>
             </div>
 
 
