--- a/index.html
+++ b/index.html
@@ -268,22 +268,16 @@
 </section>
 <section class="ftco-section part4" id="About" style="background-color:rgb(40, 40, 40)">
     <div class="ftco-animate container">
-        <p class="p4_about_title" style="color: rgb(244, 244, 244);">关于我们
-        <p>
-        <p class="p4_about" style="color: rgb(244, 244, 244);">开发组
-        <p>
+        <p class="p4_about_title" style="color: rgb(244, 244, 244);">关于我们</p>
+        <p class="p4_about" style="color: rgb(244, 244, 244);">开发组</p>
             <a class="p4_about_1" href="https://space.bilibili.com/1442421278/dynamic" target="_blank">@ProJectASF</a>
-        <p class="p4_about" style="color: rgb(244, 244, 244);">联系我们
-        <p>
+        <p class="p4_about" style="color: rgb(244, 244, 244);">联系我们</p>
             <a class="p4_link" href="https://space.bilibili.com/1442421278/dynamic" target="_blank">
-                <img src="./images/bilibili.svg" class="navbar-brand" style="width: 28px">
-            </a>
+                <img src="./images/bilibili.svg" class="navbar-brand" style="width: 28px"></a>
             <a class="p4_link" href="mailto:official@asoulfan.com">
-                <img src="./images/email.svg" class="navbar-brand" style="width: 30px">
-            </a>
-            <p class="p4_about" style="color: rgb(244, 244, 244);">友情链接
-            <p>
-            <p><div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100vw;">
+                <img src="./images/email.svg" class="navbar-brand" style="width: 30px"></a>
+        <p class="p4_about" style="color: rgb(244, 244, 244);">友情链接</p>
+            <div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100vw;">
                 <a class="p4_about_1" href="https://asoulcnki.asia/" target="_blank" style="margin-right:30px;">枝网查重</a>
                 <a class="p4_about_1" href="https://www.asdb.live" target="_blank"style="margin-right:30px;">ASDB</a>
                 <a class="p4_about_1" href="https://www.asoul.cloud" target="_blank"style="margin-right:30px;">一个魂二创</a>
