--- a/en/index.html
+++ b/en/index.html
@@ -294,7 +294,9 @@
                 <a class="p4_about_1" href="https://www.asdb.live" target="_blank"style="margin-right:30px;">ASDB</a>
                 <a class="p4_about_1" href="https://www.asoul.cloud" target="_blank"style="margin-right:30px;">A-SOUL Fanarts</a>
                 <a class="p4_about_1" href="https://www.asoulwiki.com" target="_blank"style="margin-right:30px;">ASWIKI</a>
-                <a class="p4_about_1" href="https://www.bilibili.com/video/BV1wo4y1X7Tk?p=1" target="_blank"style="margin-right:30px;">YBB</a>
+                <a class="p4_about_1" href="https://mew.fun" target="_blank"style="margin-right:30px;">Mew</a>
+                <a class="p4_about_1" href="https://asoul.jp" target="_blank"style="margin-right:30px;">asoul.jp</a>
+                <a class="p4_about_1" href="https://www.bilibili.com/video/BV1M64y1a7zh" target="_blank"style="margin-right:30px;">Sir this way!</a>
             </div>
 
 
